# cormen-for-fun

./: README.md
c15/c15.1/dynamic/: CMakeLists.txt  main.cpp
c15/c15.1/static/: CMakeLists.txt  main.cpp
c15/c15_4/dynamic/: main.cpp
c15/c15_4/static/: CMakeLists.txt  README.md
